--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "rellax": "^1.12.1",
+    "scrollreveal": "^4.0.9",
     "styled-components": "^6.0.8",
     "vanilla-tilt": "^1.8.1"
   }
